--- a/test.html
+++ b/test.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+Copyright © 2000 Alber Sanchez <albhasan@gmail.com>
+This work is free. You can redistribute it and/or modify it under the
+terms of the Do What The Fuck You Want To Public License, Version 2,
+as published by Sam Hocevar. See the COPYING file for more details.
+-->
 <html>
 	<head>
 		<meta charset="utf-8">
