--- a/georef.html
+++ b/georef.html
@@ -57,6 +57,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 		*********************************
 		-->
 		<script src="./js/georef/ControlPointManager.js"></script>
+		<script src="./js/georef/MarkerManager.js"></script>
 		<script src="./js/georef/ImageModel.js"></script>
 		<script src="./js/georef/Util.js"></script>
 		<script src="./js/georef/Coords.js"></script>
