Improved image coords management

--- a/test.html
+++ b/test.html
@@ -30,6 +30,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 		
 		<script src="./js/georef/ControlPointManager.js"></script>
 		<script src="./js/georef/ImageModel.js"></script>
+		<script src="./js/georef/ScaledImage.js"></script>
 		<script src="./js/georef/Util.js"></script>
 		<script src="./js/georef/Coords.js"></script>
 		<script src="./js/georef/Gui.js"></script>
