CSS centralized control over central div size

--- a/georef.html
+++ b/georef.html
@@ -113,6 +113,9 @@ as published by Sam Hocevar. See the COPYING file for more details.
 					</div>
 				</div>
 				<div id="middle-center">
+					<div id="mapImage"></div>
+				</div>
+				<div id="middle-right">
 					<div id="tabs" class="tabs-bottom" >
 						<ul>
 							<li><a href="#tabs-1">Split view no sync</a></li>
@@ -121,9 +124,6 @@ as published by Sam Hocevar. See the COPYING file for more details.
 						</ul>
 						<div class="tabs-spacer"></div>
 						<div id="tabs-1">
-							<div id="middle-center-tabone-left">
-								<div id="mapImage"></div>
-							</div>
 							<div id="middle-center-tabone-center">
 								<div id="map"></div>
 							</div>
@@ -136,8 +136,6 @@ as published by Sam Hocevar. See the COPYING file for more details.
 							<p>Duis cursus. Maecenas ligula eros, blandit nec, pharetra at, semper at, magna. Nullam ac lacus. Nulla facilisi. Praesent viverra justo vitae neque. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros, id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commodo. Pellentesque nec elit. Fusce in lacus. Vivamus a libero vitae lectus hendrerit hendrerit.</p>
 						</div>
 					</div>				
-				
-				
 				</div>
 			</div>
 			<div id="bottom">
