--- a/georef.html
+++ b/georef.html
@@ -118,8 +118,8 @@ as published by Sam Hocevar. See the COPYING file for more details.
 				<div id="middle-right">
 					<div id="tabs" class="tabs-bottom" >
 						<ul>
-							<li><a href="#tabs-1">Split view no sync</a></li>
-							<li><a href="#tabs-2">Split view sync</a></li>
+							<li><a href="#tabs-1">Map</a></li>
+							<li><a href="#tabs-2">Dbpedia LOD</a></li>
 							<li><a href="#tabs-3">LOD view</a></li>
 						</ul>
 						<div class="tabs-spacer"></div>
