HTML top div split in 3

--- a/georef.html
+++ b/georef.html
@@ -102,7 +102,9 @@ as published by Sam Hocevar. See the COPYING file for more details.
 	<body> 
 		<div id="container">
 			<div id="top">
-				<h1>GeoReferencer</h1>
+				<div id="top-left" ><img src="http://www.uni-muenster.de/imperia/md/images/allgemein/farbunabhaengig/wwu_logo.gif" alt="WWU"></div>
+				<div id="top-center"><p id="pTitle">Historic Map Georeferencer</p></div>
+				<div id="top-right" ><img src="http://www.uni-muenster.de/imperia/md/images/ulb/_v/logo.gif" alt="ULB"></div>				
 			</div>
 			<div id="middle">
 				<div id="middle-left">
