Added suggestions(cities) from DBpedia

--- a/test.html
+++ b/test.html
@@ -33,10 +33,12 @@ as published by Sam Hocevar. See the COPYING file for more details.
 		<script src="./js/georef/ScaledImage.js"></script>
 		<script src="./js/georef/Util.js"></script>
 		<script src="./js/georef/Coords.js"></script>
-		<script src="./js/georef/Gui.js"></script>
+		<!--<script src="./js/georef/Gui.js"></script>-->
 		<script src="./js/georef/Coords.js"></script>		
 		<script src="./js/georef/SimilarityTransformation.js"></script>
 		<script src="./js/georef/AffineTransformation.js"></script>
+		<script src="./js/georef/SparqlQuery.js"></script>
+		<script src="./js/georef/Constants.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/georef.css" />
 
 	</head>
