Info about the map area and the ruler added

--- a/georef.html
+++ b/georef.html
@@ -113,7 +113,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 								<input id="imgMapInput" type="text">
 								<button id="btLoadImage">Load image</button>
 								<br/>
-								i.e <a href="http://upload.wikimedia.org/wikipedia/commons/4/40/Strategic_Situation_of_Europe_1809.jpg" target="_blank">Europe 1809</a>
+								i.e <a href="http://www.ulb.uni-muenster.de/test/HT017212150.jpg" target="_blank">Map from ULB</a>
 							</div>
 						</div>
 						<h3>2 - Control Points</h3>
@@ -123,11 +123,15 @@ as published by Sam Hocevar. See the COPYING file for more details.
 						</div>
 						<h3>3 - Map area</h3>
 						<div>
-							Polygon with the efective map area
+							<div id="mapAreaDetails">
+								Polygon with the efective map area
+							</div>
 						</div>
 						<h3>4 - Ruler</h3>
 						<div>
-							Captures a measure on the ruler scanned along the map
+							<div id="rulerDetails">
+								Captures a measure on the ruler scanned along the map
+							</div>
 						</div>
 						<h3>Help</h3>
 						<div>
