Ontology combo added

--- a/georef.html
+++ b/georef.html
@@ -164,6 +164,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 							<li><a href="#tabs-3">Places</a></li>
 							<li><a href="#tabs-4">Links</a></li>
 							<li><a href="#tabs-5">Description</a></li>
+							<li><a href="#tabs-6">Contents</a></li>							
 						</ul>
 						<div class="tabs-spacer"></div>
 						<div id="tabs-1">
@@ -203,7 +204,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 								<fieldset id="fsTags">
 									<legend>Suggested tags</legend>
 									<button type="button" id="btUpdateMapLinks">Suggest tags</button> <br>
-									<p>Please select the tags relevant to the map.</p>
+									<p>Please check the tags relevant to the map.</p>
 									<div id="stSuggestions">
 									</div>
 								</fieldset>
@@ -217,6 +218,16 @@ as published by Sam Hocevar. See the COPYING file for more details.
 									<textarea id="taMapDescription" title="Type a description of the map."  rows="6" cols="50" ></textarea><br>
 									<button type="button" id="btFindDescriptionMatches">Find matches</button><br>
 									<div id="descriptionTags">
+									</div>
+								</fieldset>
+							</form>
+						</div>
+						<div id="tabs-6">
+							<form id="frContent">
+								<fieldset id="fsContentTags">
+									<legend>Map Contents</legend>
+									<p>Please check the general contents of the map.</p>
+									<div id="contentTags">
 									</div>
 								</fieldset>
 							</form>
