--- a/georef.html
+++ b/georef.html
@@ -181,7 +181,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 									Map title: <input type="text" id="paperMapTitle" title="Map title." /><br>
 									Map creator: <input type="text" id="paperMapCreator" title="The creator (author or cartographer) of a map."/><br>
 									Map size: <input type="text" id="paperMapSize" title="e g. 74 * 95 cm" /><br>
-									Map time: <input type="text" id="paperMapTime" title="The publication year." /><br>
+									Map time: <input type="text" id="paperMapTime" title="Time interval or moment that the map represents. i.e 1810-1819" /><br>
 									Map scale: <input type="text" id="paperMapScale" title="The scale of the paper map." /><br>
 									Map area : <textarea id="mapAreawkt" title="The area in a spatial coordinate system which corresponds to the map window of the map" ></textarea><br>
 								</fieldset>
