Fixed building triples functions. Added a function to encode some characters to Utils

--- a/georef.html
+++ b/georef.html
@@ -114,7 +114,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 								<input id="imgMapInput" type="text">
 								<button id="btLoadImage">Load image</button>
 								<br/>
-								i.e <a href="http://www.ulb.uni-muenster.de/test/HT017212150.jpg" target="_blank">Map from ULB</a>
+								i.e <a href="http://upload.wikimedia.org/wikipedia/commons/2/29/Minard.png" target="_blank">Charles Minard's map at Wikipedia</a>
 							</div>
 						</div>
 						<h3>2 - Control Points</h3>
