--- a/georef.html
+++ b/georef.html
@@ -21,6 +21,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 		
 		<link rel="stylesheet" href="./js/Leaflet.draw/dist/leaflet.draw.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="./js/Leaflet.draw/dist/leaflet.draw.ie.css" /><![endif]-->
+		<script src="./js/config.json"></script>
 		<script src="./js/Leaflet.draw/src/Leaflet.draw.js"></script>
 		<script src="./js/Leaflet.draw/src/edit/handler/Edit.Poly.js"></script>
 		<script src="./js/Leaflet.draw/src/edit/handler/Edit.SimpleShape.js"></script>
