--- a/georef.html
+++ b/georef.html
@@ -170,6 +170,15 @@ as published by Sam Hocevar. See the COPYING file for more details.
 						<div id="tabs-1">
 							<div id="middle-center-tabone-center">
 								<div id="map"></div>
+<div id="stuff">
+	Search
+	<form id="frSearchPlaces" autocomplete="off">
+		<input type="text" id="searchMapPlaces" title="Type the name of a location. The map will pan to it." />
+		<button type="button" id="btFindMapPlaces">Find</button>
+	</form>
+	<div id="foundPlaces">
+	</div>
+</div>
 							</div>
 						</div>
 						<div id="tabs-2">
@@ -191,7 +200,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 							<form id="frMapPlaces" autocomplete="off">
 								<fieldset id="fsPlaceTags">
 									<legend>Map places</legend>
-									<p>Please type a comma separated list of places.</p>
+									<p>Please type a comma separated list of places. The application will retrieve suggestions from <a href="http://dbpedia.org" target="_blank">DBpedia</a>.</p>
 									<input type="text" id="paperMapPlaces" title="Places (administrative or other) and geographic features represented in a map." />
 									<button type="button" id="btFindPlaceMatches">Find matches</button><br>
 									<div id="placeTags">
@@ -203,8 +212,8 @@ as published by Sam Hocevar. See the COPYING file for more details.
 							<form id="frTags">
 								<fieldset id="fsTags">
 									<legend>Suggested tags</legend>
+									<p>Please press the button and check the tags relevant to the map. The suggested tags will be retrieved from <a href="http://dbpedia.org" target="_blank">DBpedia</a>.</p>
 									<button type="button" id="btUpdateMapLinks">Suggest tags</button> <br>
-									<p>Please check the tags relevant to the map.</p>
 									<div id="stSuggestions">
 									</div>
 								</fieldset>
