Map description class implemented

--- a/georef.html
+++ b/georef.html
@@ -91,6 +91,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 		<script src="./js/georef/AffineTransformation.js"></script>
 		<script src="./js/georef/Constants.js"></script>
 		<script src="./js/georef/SparqlQuery.js"></script>
+		<script src="./js/georef/MapDescription.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/georef.css" />
 		
 		
