Example maps updated, ruler tool-tip updated

--- a/georef.html
+++ b/georef.html
@@ -115,7 +115,9 @@ as published by Sam Hocevar. See the COPYING file for more details.
 								<input id="imgMapInput" type="text">
 								<button id="btLoadImage">Load image</button>
 								<br/>
-								i.e <a href="http://upload.wikimedia.org/wikipedia/commons/2/29/Minard.png" target="_blank">Charles Minard's map at Wikipedia</a>
+								i.e <a href="http://sammlungen.ulb.uni-muenster.de/hd/image/view/2573587" target="_blank">Erste Periode</a>
+								<br/>
+								i.e <a href="http://sammlungen.ulb.uni-muenster.de/hd/image/view/2619150" target="_blank">Zweite Periode</a>
 							</div>
 						</div>
 						<h3 title="Click on the button 'Add an Image Control Point' on the left side map and create a matchinbg point on the right side map using the button 'Add a Map Control Point'.">2 - Control Points</h3>
@@ -136,7 +138,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 						<h3 title="Please use the 'Draw a 20cm line' tool to draw a line on the map image. Use the ruler scanned along the map (if any).">4 - Ruler</h3>
 						<div>
 							<div id="rulerDetails">
-								Please use the "<i>Draw an 20cm line</i>" tool to draw a line on the map image. Use the ruler scanned along the map (if any).
+								Please use the "<i>Draw a 20 cm line</i>" tool to draw a line on the map image. Use the ruler scanned along the map (if any).
 							</div>
 						</div>
 						<h3 title="Optional: Save the goreferenced map as an RDF file or store it directly into the default triple store.">5 - Results</h3>
